<resources>
    <string name="app_name">NotificationTest</string>
    <string name="click_prompting">"点击发送默认通知，长按进入样式设置"</string>
    <string name="btn_normal">"一般通知"</string>
    <string name="btn_bigtext">"长文本通知"</string>
    <string name="btn_bigpictrue">"大图通知"</string>
    <string name="btn_inbox">"inbox通知"</string>
    <string name="btn_progress">"进度条通知"</string>
    <string name="btn_bundle">"headsup通知"</string>
    <string name="btn_media">"多媒体通知"</string>
    <string name="btn_settings">"自定义设置通知"</string>
    <string name="btn_cancel">"取消"</string>
    <string name="btn_cancelall">"全部取消"</string>
</resources>
